# leo-grammar

./: CMakeLists.txt  Cargo.toml  Makefile  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-leo.pc.in
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_leo/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: hello.leo
